test-suite/tests/roundtrip/invalid/semantic/typecheck/bool_var_in_arith_expr/via-conjure.generated-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/bool_var_in_arith_expr/bool_var_in_arith_expr.essence:3:15:
  |
3 | such that 4 + x = y
  |               ^
Type error:
	Expected: "Number or Enum"
	Got: bool

